# SapphireGem

./: .gitattributes  .gitignore  CMakeLists.txt  CROSS_COMPILE.md  DEMO_OUTPUT.md  EXAMPLES.md  IMPLEMENTATION_NOTES.md  SHADER_COMPILATION.md  TEXTURE_USAGE.md  TODO_list.org  slang.spv
_codeql_build_dir/slang/lib/cmake/slang/: slangTargets-release.cmake
_codeql_build_dir/slang/lib/slang-standard-module-2025.24.2/: neural.slang-module
assets/shaders/: README_TEXTURED.md  compileSlang.sh  compileTexturedSlang.sh  geometry2d.slang  geometry2d_textured.slang  geometry3d.slang  geometry3d_textured.slang  layered.slang  layered.spv  mesh2d.slang  mesh3d.slang  shader.slang  slang.spv  textured.frag  textured.slang  textured.spv  textured.vert  textured3d.slang  textured3d.spv  textured_frag.spv  textured_vert.spv
cmake/: DownloadSlang.cmake  DownloadVulkan.cmake  DownloadWasmtime.cmake  GenerateClangdConfig.cmake  SetupCrossCompilation.cmake
docs/: NAMING_CONVENTION.md  SOLUTION_SUMMARY.md
lib/: CMakeLists.txt
lib/steamworks/: CMakeLists.txt
shaders/: README.md  compile_shaders.sh  compile_slang.sh  simple.vert  slang.slang
subprojects/: CMakeLists.txt
subprojects/app/: CMakeLists.txt
subprojects/app/src/: main.cpp
subprojects/common/: CMakeLists.txt
subprojects/common/include/: common.h  config.h  tasks.h
subprojects/common/src/: common.cpp  config.cpp  tasks.cpp
subprojects/graphics/: CMakeLists.txt
subprojects/graphics/include/: buffer.h  buffer_manager.h  descriptor_pool_manager.h  device_manager.h  devices_manager.h  engine3d.h  identifiers.h  image.h  layered_texture.h  logical_device.h  material.h  material_manager.h  naming.h  object.h  object_manager.h  physical_device.h  render_object.h  render_strategy.h  renderable_object.h  renderer.h  scene.h  shader.h  shader_compiler.h  swap_chain.h  texture.h  texture_manager.h  window.h
subprojects/graphics/src/: buffer.cpp  buffer_manager.cpp  descriptor_pool_manager.cpp  device_manager.cpp  devices_manager.cpp  engine3d.cpp  identifiers.cpp  image.cpp  layered_texture.cpp  logical_device.cpp  material.cpp  material_manager.cpp  object.cpp  object_manager.cpp  physical_device.cpp  render_object.cpp  renderable_object.cpp  renderer.cpp  scene.cpp  scene1.cpp  scene3.cpp  shader.cpp  shader_compiler.cpp  swap_chain.cpp  texture.cpp  texture_manager.cpp  window.cpp
subprojects/scenes/: CMakeLists.txt
subprojects/scenes/include/: scene1.h  scene2.h  scene3.h  scene4.h  scene5.h  window.h
subprojects/scenes/src/: scene1.cpp  scene2.cpp  scene3.cpp  scene4.cpp  scene5.cpp  window.cpp
subprojects/wasm-runtime/: CMakeLists.txt  README.md
subprojects/wasm-runtime/include/: slang_wasm_compiler.h  wasm_runtime.h
subprojects/wasm-runtime/src/: slang_wasm_compiler.cpp  wasm_runtime.cpp
